kubernetes/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: trac-tcm
spec: {}
status: {}
