kubernetes/overlays/production/patch-api-resources.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: trac-tcm-api

spec:
  template:
    spec:
      containers:
      - name: trac-tcm-api
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: "2"
            memory: 1Gi
