kubernetes/overlays/production/patch-mongo-resources.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: trac-tcm-mongo

spec:
  template:
    spec:
      containers:
      - name: trac-tcm-mongo
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: "2"
            memory: 1Gi
      volumes:
      - name: mongodb
        persistentVolumeClaim:
          claimName: trac-tcm-mongo
