kubernetes/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trac-tcm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: trac-tcm.k.hazil.net
    http:
      paths:
      - backend:
          service:
            name: trac-tcm-ui
            port:
              number: 80
        path: /
        pathType: Prefix
